# code-conductor

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  config.example.toml  plan.md  pyproject.toml
conductor/: __init__.py  __main__.py  app.py  config.py  projects.py  session_footer.py
conductor/adapters/: base.py  claude_code.py  codex.py  factory.py
conductor/bridges/: __init__.py  codex_telegram.py  notifier.py  slot_activity.py
conductor/channels/: __init__.py  bot_pool.py
conductor/monitor/: __init__.py  thresholds.py  transcript.py
conductor/sessions/: __init__.py  manager.py  reaper.py  registry.py  tmux.py
conductor/telegram/: __init__.py  control_bot.py  keyboards.py
deploy/: conductor.service  setup-wsl.md
prompts/: README.md  claude-code-implementation.md  codex-cli-implementation.md
tests/: test_adapters.py  test_claude_settings.py  test_codex_bridge.py  test_config.py  test_notifier.py  test_projects.py  test_registry.py  test_session_footer.py  test_telegram_slot_env.py  test_trust_prompt.py
